<resources>
    <string name="app_name">时光伴侣</string>
    <string name="image_content">图片</string>
    <string name="com_delete">删除</string>
    <string name="com_delete_recover">恢复</string>
    <string name="com_delete_finally">彻底删除</string>
    <string name="delete_dlg_title">确认删除?</string>
    <string name="delete_dlg_message">删除后将无法恢复.</string>
    <string name="com_edit">编辑</string>
    <string name="com_tip">提示</string>
    <string name="com_back_tip">退出此次编辑</string>
    <string name="com_setting">设置</string>
    <string name="share">分享</string>
    <string name="com_add">添加</string>
    <string name="com_back">返回</string>
    <string name="com_save">保存</string>
    <string name="com_discard">放弃</string>
    <string name="com_cancel">取消</string>
    <string name="com_confirm">确定</string>
    <string name="com_yes">是</string>
    <string name="com_no">否</string>
    <string name="com_title">标题</string>
    <string name="others">其他</string>
    <string name="com_share">分享</string>
    <string name="com_alarm_">闹钟</string>
    <string name="share_app">分享应用</string>
    <string name="com_edit_dialog_tip">写下些什么&#8230;</string>
    <string name="default_share_words">嗨，我在使用一款很棒的时间管理工具，推荐你也用下哦。</string>
    <string name="share_item_dlg_title">写些要分享的内容</string>
    <string name="share_item_dlg_hint">想要说些什么&#8230;</string>
    <string name="share_item_chooser_title">分享APP给好友</string>
    <string name="share_app_chooser_title">分享APP给好友</string>
    <string name="notice_share_input">请输入分享内容</string>
    <string name="com_toast_save_success">添加成功</string>
    <string name="com_toast_save_failed">添加失败</string>
    <string name="com_toast_update_success">更新成功</string>
    <string name="com_toast_update_failed">更新失败</string>
    <string name="com_toast_delete_success">删除成功</string>
    <string name="com_toast_delete_success2">记录已被移动到回收站，可以从回收站中恢复.</string>
    <string name="edit_empty">输入内容为空</string>
    <string name="com_record_error1">初始化录音设备失败</string>
    <string name="com_record_error2">打开录音设备失败</string>
    <string name="com_record_error3">没有可用的SD卡</string>
    <string name="com_record_error4">无法创建存储路径</string>
    <string name="com_record_error5">初始化文件存储路径失败</string>
    <string name="play_sound">播放音频</string>
    <string name="play_sound_progress">当前进度:</string>
    <string name="play_failed_load">加载音乐文件失败</string>
    <string name="press_record">长按录音</string>
    <string name="recording">正在录音&#8230;</string>
    <string name="beginning_location">正在定位&#8230;</string>
    <string name="record_dlg_title">保存录音</string>
    <string name="record_dlg_content">是否保存录音?</string>
    <string name="record_save_tip1">文件已保存为</string>
    <string name="icon_error1">图片文件无法创建</string>
    <string name="image_default_name">未命名</string>
    <string name="icon_set_error">设置图片失败</string>
    <string name="com_name">名字</string>
    <string name="com_content">内容</string>
    <string name="com_no_location_service">没有可用的位置提供器</string>
    <string name="com_no_location_permission">该应用没有获得位置访问许可权限</string>
    <string name="audio_src_record">录音</string>
    <string name="audio_src_file">从文件夹中选取</string>
    <string name="audio_copyright">请尊重原作版权.</string>
    <string name="alarm_details">详细</string>
    <string name="menu_show_as">视图</string>
    <string name="menu_show_as_entry_list">列表</string>
    <string name="menu_show_as_entry_grid">网格</string>
    <string name="permission_set_dilog_title">设置权限</string>
    <string name="permission_set_dialog_msg_body1">打开"设置"，轻触"权限"，将"</string>
    <string name="permission_set_dialog_msg_body2">"设置为打开，并再次尝试. </string>
    <string name="permission_storage">存储空间</string>
    <string name="permission_phone">电话</string>
    <string name="permission_location">位置信息</string>
    <string name="permission_microphone">麦克风</string>
    <string name="permission_set_button">去设置</string>
    <string name="permission_denied_toast">请授予程序权限后再次尝试.</string>
    <string name="language">中文</string>
    <string name="week1">星期日</string>
    <string name="week2">星期一</string>
    <string name="week3">星期二</string>
    <string name="week4">星期三</string>
    <string name="week5">星期四</string>
    <string name="week6">星期五</string>
    <string name="week7">星期六</string>
    <string name="com_date">日期：</string>
    <string name="com_time">时间：</string>
    <string name="notice">提醒</string>
    <string name="com_minute">分钟</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="cld_week1">周日</string>
    <string name="cld_week2">周一</string>
    <string name="cld_week3">周二</string>
    <string name="cld_week4">周三</string>
    <string name="cld_week5">周四</string>
    <string name="cld_week6">周五</string>
    <string name="cld_week7">周六</string>
    <string name="welcome_skip">跳过</string>
    <string name="welcome_script">版权所有 2016</string>
    <string name="password_hint">输入密码</string>
    <string name="email_hint">输入邮箱</string>
    <string name="login_title">登录时光伴侣</string>
    <string name="login_subtitle">使用注册时所填写的邮箱和密码</string>
    <string name="login_forget">忘记密码?</string>
    <string name="login_social">使用社交账号登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="we_char">微信</string>
    <string name="twitter">推特</string>
    <string name="weibo">微博</string>
    <string name="account_toast">请输入邮箱</string>
    <string name="password_toast">请输入密码</string>
    <string name="check_net_toast">请检查网络连接</string>
    <string name="account_none_exist_toast">账号不存在</string>
    <string name="password_error_toast">密码错误</string>
    <string name="rgst_title">注册账号</string>
    <string name="rgst_back">返回</string>
    <string name="rgst_script">高效利用你的时间，从注册时光伴侣开始</string>
    <string name="in_name_hint">名字</string>
    <string name="in_account_hint">邮箱</string>
    <string name="in_psd_hint">密码</string>
    <string name="in_repsd_hint">再次输入密码</string>
    <string name="cfm_register">确认注册</string>
    <string name="empty_name_toast">请输入用户名</string>
    <string name="empty_account_toast">请输入邮箱</string>
    <string name="empty_psd_toast">请输入密码</string>
    <string name="empty_repsd_toast">请再次输入密码</string>
    <string name="back_cancel">取消</string>
    <string name="back_confirm">确定</string>
    <string name="back_tip">提示:</string>
    <string name="back_dlg_msg">现在返回输入的信息将会丢失，确认返回吗？</string>
    <string name="name_Ill_char">错误:用户名包含非法字符</string>
    <string name="email_format">错误:邮箱格式不合法</string>
    <string name="check_net">错误:请检查网络连接</string>
    <string name="email_none_exist">错误:您输入的邮箱不存在</string>
    <string name="email_registered">错误:该邮箱已被注册</string>
    <string name="unknown_error">错误:发生未知错误</string>
    <string name="known_error">错误:发生错误</string>
    <string name="psd_long">错误:密码长度大于16</string>
    <string name="psd_short">错误:密码长度小于6</string>
    <string name="psd_numeric">错误:密码是纯数字的</string>
    <string name="psd_Ill_char">错误:密码包含非法字符</string>
    <string name="repsd_diff">错误:两次输入的密码不相同</string>
    <string name="psd_dlg_msg">密码长度应该在6至16个字符之间，只能包含字母、数字和下划线，不能是纯数字的。</string>
    <string name="back_modify">返回修改</string>
    <string name="cfm_code">错误:验证码错误</string>
    <string name="rgst_success">注册成功</string>
    <string name="rgst_account">账号是:</string>
    <string name="rgst_pass">\n密码是:</string>
    <string name="back_login">返回登录</string>
    <string name="default_dash_saying">欢迎使用《时光伴侣》.</string>
    <string name="press_again_exit_app">再按一次退出</string>
    <string name="main_nav_drawer_open">打开用户信息</string>
    <string name="main_nav_drawer_close">关闭用户信息</string>
    <string name="menu1">日历</string>
    <string name="menu2">课程</string>
    <string name="menu3">日程</string>
    <string name="menu4">作业</string>
    <string name="menu5">考试</string>
    <string name="menu6">随手记</string>
    <string name="add_img_title">更换图片</string>
    <string name="edit_title">添加文字</string>
    <string name="edit_hint">在这里输入文字</string>
    <string name="c_more">课程表</string>
    <string name="mmenu_zone">空间</string>
    <string name="mmenu_time_line">时光线</string>
    <string name="mmenu_rate_today">为今天打分</string>
    <string name="mmenu_sync">同步数据</string>
    <string name="mmenu_share">分享应用</string>
    <string name="mmenu_setting">设置</string>
    <string name="mmenu_trash">回收站</string>
    <string name="mmenu_feedback">帮助与反馈</string>
    <string name="mmenu_about">关于</string>
    <string name="mmenu_exit">退出登录</string>
    <string name="mrate_title">评分：</string>
    <string name="mrate_tip1">今天的综合表现：</string>
    <string name="mrate_tip2">简单评语：</string>
    <string name="mrate_cancel">等会儿再评</string>
    <string name="mrate_complete">评分完成</string>
    <string name="mrate_success_toast">评分成功</string>
    <string name="mrate_rated_toast">今天已经评价</string>
    <string name="mflower_content_title">时光伴侣:</string>
    <string name="mflower_content_info1">忙了一天也该歇会儿了，自己要好好照顾自己哦。</string>
    <string name="mflower_content_info2">一个人在外面打拼，记得要对自己好点。</string>
    <string name="begining_of_day_title">开始新的一天！</string>
    <string name="begining_od_day_info">看看今天都有什么事情要做，在时光伴侣安排你今天的时间规划. </string>
    <string name="content_describe_text_class">课程</string>
    <string name="content_describe_text_exam">考试</string>
    <string name="content_describe_text_task">作业</string>
    <string name="content_describe_text_assign">日程</string>
    <string name="content_describe_text_note">随手记</string>
    <string name="s_section_class">今天的课程</string>
    <string name="s_section_task">今天的作业</string>
    <string name="s_section_exam">今天的考试</string>
    <string name="s_section_note">随手记提醒</string>
    <string name="s_section_assign">今天的日程</string>
    <string name="s_section_assign2">未完成的日程</string>
    <string name="class_back">本周</string>
    <string name="class_share">分享</string>
    <string name="class_next">下周</string>
    <string name="class_above">上周</string>
    <string name="class_all">全部课程</string>
    <string name="sub_assign_edit_title_edit_hint">标题</string>
    <string name="sub_assign_edit_content_edit_hint">添加子日程内容&#8230;</string>
    <string name="sub_assign_edit_start_date_tip">开始日期 : </string>
    <string name="sub_assign_edit_start_time_tip">开始时间 : </string>
    <string name="setting_title">设置</string>
    <string name="setting_dashboard">设置主界面</string>
    <string name="set_dash_bg">设置背景</string>
    <string name="set_dash_bg_detail">添加主界面色彩或者图片</string>
    <string name="set_dash_saying">设置座右铭</string>
    <string name="show_circumstance">设置气象信息</string>
    <string name="show_circumstance_detail">是否在主界面显示气象信息</string>
    <string name="setting_notice">设置提醒</string>
    <string name="set_notice_mode">提醒方式</string>
    <string name="set_notice_mode_detail">课程、日程、作业、考试以及随手记的提醒方式</string>
    <string name="daily_notice_time">开始提醒时间</string>
    <string name="daily_notice_time_detail">每天开始的提醒时间</string>
    <string name="notice_time">固定提醒时间</string>
    <string name="notice_time_detail">课程、日程、作业、考试以及随手记的提醒时间</string>
    <string name="set_calendar">设置日历</string>
    <string name="set_lunar">显示农历</string>
    <string name="set_lunar_detail">是否在日历中显示农历</string>
    <string name="set_start_time">周历的开始时间</string>
    <string name="set_end_time">周历的结束时间</string>
    <string name="set_week_calendar_title">显示高度</string>
    <string name="set_week_calendar_height_title">单位小时显示的高度</string>
    <string name="start_time_title">选择每天的开始时间</string>
    <string name="end_time_title">选择每天的结束时间</string>
    <string name="set_cls_dashboard">设置课程界面</string>
    <string name="set_cls_hour_height_title">课程表单位小时高度</string>
    <string name="set_cls_hour_height">显示高度</string>
    <string name="cls_db_start_time">开始时间</string>
    <string name="cls_start_time_title">选择课程表开始时间</string>
    <string name="cls_db_end_time">结束时间</string>
    <string name="cls_end_time_title">选择课程表结束时间</string>
</resources>