<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_rate_today"
            android:title="@string/mmenu_rate_today"
            android:icon="@drawable/ic_rating"/>
        <item android:id="@+id/nav_sync"
            android:title="@string/mmenu_sync"
            android:icon="@drawable/ic_sync"/>
        <item android:id="@+id/nav_trash"
            android:title="@string/mmenu_trash"
            android:icon="@drawable/ic_trash"/>
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/nav_setting"
            android:title="@string/mmenu_setting"
            android:icon="@drawable/ic_settings"/>
        <item android:id="@+id/nav_about"
            android:title="@string/mmenu_about"
            android:icon="@drawable/ic_about"/>
        <item android:id="@+id/nav_feedback"
            android:title="@string/mmenu_feedback"
            android:icon="@drawable/ic_feedback"/>
    </group>
</menu>