<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.base.PreferActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/prefer_prime"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/setting_title"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/setting_dashboard"
                android:textStyle="bold"
                android:textColor="@color/prefer_prime"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <me.shouheng.timepartner.widget.preference.PreferImageView
                android:id="@+id/set_background"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_dash_bg"
                app:preference_detail="@string/set_dash_bg_detail"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferCheckbox
                android:id="@+id/set_circumstance"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/show_circumstance"
                app:preference_detail="@string/show_circumstance_detail"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_saying"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_dash_saying"/>

            <TextView
                android:text="@string/setting_notice"
                android:textStyle="bold"
                android:textColor="@color/prefer_prime"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_notice_mode"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_notice_mode"
                app:preference_detail="@string/set_notice_mode_detail"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_daily_notice_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/daily_notice_time"
                app:preference_detail="@string/daily_notice_time_detail"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_item_notice_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/notice_time"
                app:preference_detail="@string/notice_time_detail"/>

            <TextView
                android:text="@string/set_calendar"
                android:textStyle="bold"
                android:textColor="@color/prefer_prime"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <me.shouheng.timepartner.widget.preference.PreferCheckbox
                android:id="@+id/set_show_lunar"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_lunar"
                app:preference_detail="@string/set_lunar_detail"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_week_calendar_height"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_week_calendar_title"
                app:preference_detail="@string/set_week_calendar_height_title"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_week_calendar_start_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_start_time"
                app:preference_detail="@string/start_time_title"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_week_calendar_end_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_end_time"
                app:preference_detail="@string/end_time_title"/>

            <TextView
                android:text="@string/set_cls_dashboard"
                android:textStyle="bold"
                android:textColor="@color/prefer_prime"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_class_board_height"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/set_cls_hour_height"
                app:preference_detail="@string/set_cls_hour_height_title"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_class_board_start_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:preference_title="@string/cls_db_start_time"
                app:preference_detail="@string/cls_start_time_title"/>
            <View
                android:background="#ccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
            <me.shouheng.timepartner.widget.preference.PreferTextView
                android:id="@+id/set_class_board_end_time"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:preference_title="@string/cls_db_end_time"
                app:preference_detail="@string/cls_end_time_title"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
