<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.shouheng.timepartner.activities.tpclass.ClassActivity">
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/class_back"
        android:title="@string/class_back" />
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/class_above"
        android:title="@string/class_above" />
    <item
        app:showAsAction="never"
        android:orderInCategory="100"
        android:id="@+id/class_next"
        android:title="@string/class_next" />
    <item
        app:showAsAction="never"
        android:id="@+id/class_all"
        android:title="@string/class_all"
        android:orderInCategory="100"/>
    <item
        app:showAsAction="never"
        android:id="@+id/class_share"
        android:title="@string/class_share"
        android:orderInCategory="100"/>
</menu>