<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/week_bar"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12sp"
            android:textColor="@android:color/holo_red_light"
            android:layout_weight="1"
            android:text="@string/week1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week4"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week6"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@android:color/holo_red_light"
            android:textSize="12sp"
            android:layout_weight="1"
            android:text="@string/week7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/list_calendar"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/daily_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>