<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--输入邮箱-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/in_account"
            android:hint="@string/in_account_hint"
            android:textColor="@color/colorPrimaryLight"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_mail"/>
    </android.support.design.widget.TextInputLayout>

    <!--输入密码-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/in_psd"
            android:hint="@string/in_psd_hint"
            android:textColor="@color/colorPrimaryLight"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/edit_password"/>
    </android.support.design.widget.TextInputLayout>
    <!--确定注册-->
    <LinearLayout
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">
        <me.shouheng.timepartner.widget.ripplebutton.UIRippleButton
            android:id="@+id/cancel_register"
            android:text="@string/com_cancel"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_weight="2"
            android:background="@color/gray"
            app:ripple_color = "@color/gray1"
            app:color_unpressed="@color/gray"
            app:ripple_duration="400"
            app:shape_type="rectangle"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
        <me.shouheng.timepartner.widget.ripplebutton.UIRippleButton
            android:id="@+id/cfm_register"
            android:text="@string/cfm_register"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            app:ripple_color = "@color/colorPrimaryLight"
            app:color_unpressed="@color/colorPrimary"
            app:ripple_duration="400"
            app:shape_type="rectangle"
            android:layout_marginStart="10dp"
            android:layout_width="0dp"
            android:layout_height="40dp"/>
    </LinearLayout>
</LinearLayout>